<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    
    <TextView
        android:id="@+id/animal_title"
        style="@style/title_bar"
        android:text="@string/animal_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    
    <ScrollView
        android:layout_below="@id/animal_title"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="5dip"
            android:orientation="vertical">
            
            <ImageView
                android:id="@+id/animal_image"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip" />
            
            <TextView
                style="@style/h2"
                android:text="@string/description" />
            
            <View   
                style="@style/divider" />
            
	        <TextView
		        android:id="@+id/animal_description"
		        style="@style/text_area" />
	        
		    <TextView
                style="@style/h2"
                android:text="@string/distribution" />
		    
            <View   
                style="@style/divider" />
            
            <TextView
                android:id="@+id/animal_distribution"
                style="@style/text_area" />
            
		    <TextView
		        style="@style/h2"
	            android:text="@string/things_to_know" />
		    
	        <View   
		        style="@style/divider" />
	        
	        <TextView
	            android:id="@+id/animal_know"
	            style="@style/text_area" />
	        
	    </LinearLayout>
	    
    </ScrollView>
    
</RelativeLayout>
